# Loke_workspace

./: README.md
devel/: .catkin  .rosinstall  setup.sh
devel/include/cvCamera/: cameraTip.h
devel/include/messages/: ArmorDetectionAction.h  ArmorDetectionActionFeedback.h  ArmorDetectionActionGoal.h  ArmorDetectionActionResult.h  ArmorDetectionFeedback.h  ArmorDetectionGoal.h  ArmorDetectionResult.h  BotGoalAction.h  BotGoalActionFeedback.h  BotGoalActionGoal.h  BotGoalActionResult.h  BotGoalFeedback.h  BotGoalGoal.h  BotGoalResult.h  ChassisMode.h  ChassisModeRequest.h  ChassisModeResponse.h  CheckStatus.h  CheckStatusRequest.h  CheckStatusResponse.h  EnemyDirectionAction.h  EnemyDirectionActionFeedback.h  EnemyDirectionActionGoal.h  EnemyDirectionActionResult.h  EnemyDirectionFeedback.h  EnemyDirectionGoal.h  EnemyDirectionResult.h  EnemyPos.h  GameBuffStatus.h  GameBuffStatusRequest.h  GameBuffStatusResponse.h  GameInfo.h  GimbalAngle.h  GimbalMode.h  GimbalModeRequest.h  GimbalModeResponse.h  GlobalPlannerAction.h  GlobalPlannerActionFeedback.h  GlobalPlannerActionGoal.h  GlobalPlannerActionResult.h  (+43 more)
devel/lib/cvCamera/: camera
devel/lib/pkgconfig/: cvCamera.pc  roborts.pc  rplidar_ros.pc
devel/lib/roborts/: armor_detection_client  armor_detection_node  buff_navi  caisson_detection_client  caisson_detection_node  camera_node  clustering  color_detection_client  color_detection_node  global_planner_client  global_planner_node  local_planner_client  local_planner_node  local_planner_test  localization_client  localization_node  mode_control  self_check_node  serial_com_node  serial_com_test  stage1  test_costmap  test_decision_node  tf_tree
devel/lib/rplidar_ros/: rplidarNode  rplidarNodeClient
src/RoboRTS/modules/decision/: CMakeLists.txt
src/RoboRTS/modules/decision/behavior_tree/proto/: decision.pb.cc  decision.pb.h
src/RoboRTS/modules/decision/sc1_decision/: .stage1.cpp.swi  .stage1.cpp.swj  .stage1.cpp.swk  .stage1.cpp.swl  .stage1.cpp.swm  .stage1.cpp.swn  .stage1.cpp.swo  .stage1.cpp.swp  .stage1_cao.cpp.swp  adjust_pose.cpp  buff_navi.cpp  mode_control.cpp  stage1 23 .cpp  stage1.cpp  stage1_cao.cpp  stage1_damn.cpp  stage1_fuck.cpp
src/RoboRTS/modules/perception/detection/caisson_detection/: CMakeLists.txt  caisson_detection_client.cpp  caisson_detection_node.cpp  caisson_detection_node.h
src/RoboRTS/modules/perception/detection/caisson_detection/config/: caisson_detection.prototxt
src/RoboRTS/modules/perception/detection/caisson_detection/proto/: caisson_detection.pb.cc  caisson_detection.pb.h  caisson_detection.proto
src/RoboRTS/modules/perception/detection/caisson_detection/xml/: bpcharModel.xml
src/cvCamera/: CMakeLists.txt
src/cvCamera/launch/: camera.launch  gmapping.launch~  gmapping_static.launch~  patrol_robot.launch~  pgmapping.launch~
src/cvCamera/src/: .cpp  (+15 more)
(+391 files in other folders)
